<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/appLayoutTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/searchCoffeeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:hint="@string/searchCoffeeHint"
            android:inputType="text"
            android:textColor="@color/bgColor"
            android:textSize="24sp"
            android:textStyle="bold">

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/searchCoffeeTypeSpinner"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:prompt="@string/searchCoffeeTypePrompt" />
    </LinearLayout>

    <TextView
        android:id="@+id/searchCoffeeShopTextView"
        style="@style/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/searchCoffeesResultsLbl"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/inactiveBGColor"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout

            android:id="@+id/footerLinearLayout"
            style="@style/footer"
            android:layout_alignParentBottom="true"
            android:background="@color/bannerBGColor">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dip"
                android:text="@string/appWebsite"
                android:textColor="@color/bgColor" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footerLinearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@id/android:empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/recentlyViewedListEmptyMessage"
                android:textColor="@color/headerBGColor" />

        </FrameLayout>

    </RelativeLayout>
</LinearLayout>