<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/full_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        style="@style/appTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/appHelpTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/barTextView"
        style="@style/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:gravity="top"
            android:text="@string/appHelp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/footerLinearLayout"
            style="@style/footer"
            android:layout_alignParentBottom="true"
            android:background="@color/bannerBGColor" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/appWebsite"
                android:textColor="@color/bgColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:fontFamily="cursive"
            android:gravity="top"
            android:text="@string/appHelpExtra"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/helpTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/help_icon"
            android:textAlignment="center"
            tools:ignore="ContentDescription"
            android:layout_below="@+id/TextView01"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp" />

    </RelativeLayout>

</LinearLayout>